# ruxcoin

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac  libruxcoinconsensus.pc.in
.tx/: config
contrib/: README.md  qt_translations.py  ruxcoin-qt.pro  ruxcoind.bash-completion  tidy_datadir.sh
depends/: Makefile  README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  (+6 more)
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  addrman.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_memusage.h  core_read.cpp  core_write.cpp  dbwrapper.cpp  (+78 more)
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_ruxcoin.cpp  crypto_hash.cpp  rollingbloom.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.cpp  aes.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/crypto/ctaes/: README.md
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  (+67 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: ruxcoin_af.ts  ruxcoin_af_ZA.ts  ruxcoin_ar.ts  ruxcoin_be_BY.ts  ruxcoin_bg.ts  ruxcoin_ca.ts  ruxcoin_ca@valencia.ts  ruxcoin_ca_ES.ts  ruxcoin_cs.ts  ruxcoin_cs_CZ.ts  ruxcoin_cy.ts  ruxcoin_da.ts  ruxcoin_de.ts  ruxcoin_el.ts  ruxcoin_el_GR.ts  ruxcoin_en.ts  ruxcoin_en_GB.ts  ruxcoin_eo.ts  ruxcoin_es.ts  ruxcoin_es_AR.ts  ruxcoin_es_CL.ts  ruxcoin_es_CO.ts  ruxcoin_es_DO.ts  ruxcoin_es_ES.ts  ruxcoin_es_MX.ts  ruxcoin_es_UY.ts  ruxcoin_es_VE.ts  ruxcoin_et.ts  ruxcoin_eu_ES.ts  ruxcoin_fa.ts  ruxcoin_fa_IR.ts  ruxcoin_fi.ts  ruxcoin_fr.ts  ruxcoin_fr_CA.ts  ruxcoin_fr_FR.ts  ruxcoin_gl.ts  ruxcoin_he.ts  ruxcoin_hi_IN.ts  ruxcoin_hr.ts  ruxcoin_hu.ts  (+44 more)
src/qt/res/: ruxcoin-qt-res.rc
src/qt/res/icons/: ruxcoin.icns
src/qt/test/: Makefile  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  ruxcoinconsensus.cpp  ruxcoinconsensus.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_ruxcoin_NativeSecp256k1.c  org_ruxcoin_NativeSecp256k1.h
src/secp256k1/src/java/org/ruxcoin/: NativeSecp256k1.java
src/support/: cleanse.cpp  cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  ruxcoin-util-test.py  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  (+18 more)
src/test/data/: README.md  ruxcoin-util-test.json
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/wallet/: crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: accounting_tests.cpp  crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+216 files in other folders)
